# Sphere

./: .gitattributes  README.md  pyproject.toml
bash/: fix.sh  rebild-venv.sh
sphere/: cli.py  register_all_commands.py
sphere/hardware/: cpu_info.py  net_show.py  ram_info.py  register_hardware_command.py
sphere/hardware/cpu_info/: cpu_info.py  handle_cpu_flags.py
sphere/hardware/disk_show/: disk_info.py  handle_disk_flags.py
sphere/hardware/gpu_info/: commands_gpu.py  gpu_info.py  handle_gpu_flags.py
sphere/hardware/net_show/: commands_net.py  handle_net_flags.py
sphere/hardware/sph_show/: commands_show.py  sph_show.py
sphere/hardware/users/: commands_users_update.py  show_user.py
sphere/lib/: cpu.py  gpu.py
sphere/native/: Cargo.toml
sphere/native/src/: cpu_info.rs  gpu_info.rs  lib.rs
sphere/other/: register_other_command.py
sphere/other/logo/: commands_logo.py  logo.py
sphere/other/version/: commands_version.py
sphere/pkg_actions/: get_package_manager.py  register_pkg_command.py
sphere/pkg_actions/check_update/: commands_check_update.py
sphere/pkg_actions/install/: install_main.py
sphere/pkg_actions/update/: commands_update.py  flag_manager.py
