[workspace.metadata]
rustflags = ["-A", "unsafe_op_in_unsafe_fn"]

[package]
name = "sphere_native"
version = "0.1.0"
edition = "2024"

[lib]
name = "sphere_native_rust"
crate-type = ["cdylib"]
[dependencies]
raw-cpuid = "11.6.0"
sysinfo = "0.37.2"
cpuid = "0.1"  
num_cpus = "1.0"  
psutil = "0.9"
pyo3 = { version = "0.21", features = ["extension-module"] }


wgpu = "0.19"
pollster = "0.3"


